--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
@@ -40,7 +40,7 @@
             display: inline-block;
             width: 52%;
             vertical-align:bottom;
-            transform:translateY(10%);
+            transform:translateY(5%);
         }
         
         .ip-result {
@@ -58,30 +58,33 @@
         .ip-geo {
             color: #444;
             font-size:15px;
+            line-height:20px;
             white-space: nowrap;  /*强制span不换行*/
             display: inline-block;  /*将span当做块级元素对待*/
             width: 40%;  /*限制宽度*/
             overflow: hidden;  /*超出宽度部分隐藏*/
             text-overflow: ellipsis;  /*超出部分以点号代替*/
             vertical-align:bottom;
-            transform:translateY(2%);
+            transform:translateY(15%);
         }
         
         .ip-checking {
             color: #444;
             font-size:15px;
+            line-height:20px;
             display: inline-block;
             vertical-align:bottom;
             width: 29%;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            transform:translateY(10%);
+            transform:translateY(12%);
         }
 
         .sk-text-success {
             color: #32b643;
             font-size:15px;
+            line-height:20px;
             display: inline-block;
             vertical-align:bottom;
             width: 48%;
@@ -89,12 +92,13 @@
             overflow: hidden;
             text-overflow: ellipsis;
             text-align: left;
-            transform:translateY(10%);
+            transform:translateY(12%);
         }
 
         .sk-text-error {
             color: #e85600;
             font-size:15px;
+            line-height:20px;
             display: inline-block;
             vertical-align:bottom;
             width: 48%;
@@ -102,7 +106,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             text-align: left;
-            transform:translateY(10%);
+            transform:translateY(12%);
         }
 
         h3 {
@@ -163,7 +167,7 @@
         </div>
     </div>
     <div>
-        <p style="float: right; margin-top: 3px; font-size:15px; padding-right: 10px">Powered by <a onclick="return ip_skk()" href="javascript:void(0);">ip.skk.moe</a></p>
+        <p style="float: right; margin-top: 30px; font-size:15px; padding-right: 10px">Powered by <a onclick="return ip_skk()" href="javascript:void(0);">ip.skk.moe</a></p>
     </div>
     </td></tr>
 	</table>
