--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/developer.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/developer.htm
@@ -1,7 +1,7 @@
 <fieldset class="cbi-section">
 	<table>
-	  <tr><td width="25%"> Clash 主程序发布: </td><td  width="25%" align="left" id="_binupdate"><%:Collecting data...%></td><td width="25%"> OpenClash 客户端发布: </td><td width="25%" align="left" id="_openupdate"><%:Collecting data...%></td></tr>
-		<tr><td width="25%"> Clash 主程序开发: Dreamacro </td><td  width="25%" align="left" id="_Dreamacro"><%:Collecting data...%></td><td width="25%"> OpenClash 客户端开发: vernesong </td><td width="25%" align="left" id="_vernesong"><%:Collecting data...%></td></tr>
+	  <tr><td width="25%"> Clash 核心发布: </td><td  width="25%" align="left" id="_binupdate"><%:Collecting data...%></td><td width="25%"> OpenClash 客户端发布: </td><td width="25%" align="left" id="_openupdate"><%:Collecting data...%></td></tr>
+		<tr><td width="25%"> Clash 核心开发: Dreamacro </td><td  width="25%" align="left" id="_Dreamacro"><%:Collecting data...%></td><td width="25%"> OpenClash 客户端开发: vernesong </td><td width="25%" align="left" id="_vernesong"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> Luci For Clash: frainzy1477 </td><td  width="25%" align="left" id="_frainzy1477"><%:Collecting data...%></td><td width="25%"> MyIP: SukkaW </td><td width="25%" align="left" id="_SukkaW"><%:Collecting data...%></td></tr>
 	</table>
 </fieldset>
