--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
@@ -114,7 +114,7 @@
     
     function telegrampage()
     {
-        url6='https://telegram.clash.dev';
+        url6='https://t.me/joinchat/D4mVX0n-n5mOK6YO_W3_Og';
         window.open(url6);
     }
     
