--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
@@ -304,8 +304,9 @@
 	      IP.getWebrtcIP();
 	      
 	      function getPcolIP(data){
+                let pcisp = data.addr.split(' ');
                 $$.getElementById('ip-pcol').innerHTML = data.ip;
-                IP.parseIPIpip(data.ip, 'ip-pcol-ipip');
+                $$.getElementById('ip-pcol-ipip').innerHTML = `${data.pro} ${data.city} ${data.region} ${pcisp[1]}`;
         };
         function getIpsbIP(data){
                 $$.getElementById('ip-ipsb').innerHTML = data.address;
@@ -334,6 +335,16 @@
 		       IP.getIpipnetIP();
 		       IP.getIpifyIP();
 		       IP.getWebrtcIP();
+		       
+		       function getPcolIP(data){
+		            let pcisp = data.addr.split(' ');
+                $$.getElementById('ip-pcol').innerHTML = data.ip;
+                $$.getElementById('ip-pcol-ipip').innerHTML = `${data.pro} ${data.city} ${data.region} ${pcisp[1]}`;
+		       };
+		       function getIpsbIP(data){
+                $$.getElementById('ip-ipsb').innerHTML = data.address;
+                $$.getElementById('ip-ipsb-geo').innerHTML = `${data.country} ${data.province} ${data.city} ${data.isp.name}`
+		       };
 
        	   setTimeout("myip_Load()",1000*10);
 		   }
