--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/developer.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/developer.htm
@@ -1,11 +1,16 @@
 <fieldset class="cbi-section">
 	<table>
 		<tr>
-		<td  width="10%" align="center" id="_Dreamacro"><%:Collecting data...%></td><td width="10%" align="center" id="_vernesong"><%:Collecting data...%></td>
-		<td  width="10%" align="center" id="_frainzy1477"><%:Collecting data...%></td><td width="10%" align="center" id="_SukkaW"><%:Collecting data...%></td>
-		<td  width="10%" align="center" id="_lhie1_dev"><%:Collecting data...%></td><td width="10%" align="center" id="_ConnersHua_dev"><%:Collecting data...%></td>
-		<td width="10%" align="center" id="_haishanh"><%:Collecting data...%></td><td  width="10%" align="center" id="_MaxMind"><%:Collecting data...%></td>
-		<td width="10%" align="center" id="_FQrabbit"><%:Collecting data...%></td><td  width="10%" align="center" id="_Fndroid"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_Dreamacro"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_vernesong"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_frainzy1477"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_SukkaW"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_lhie1_dev"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_ConnersHua_dev"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_haishanh"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_MaxMind"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_FQrabbit"><%:Collecting data...%></td>
+		<td width="10%" align="center" id="_Fndroid"><%:Collecting data...%></td>
 		</tr>
 	</table>
 </fieldset>
