--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
@@ -213,7 +213,7 @@
           }
           if(rdmdl==3)
           {
-             startlog.innerHTML = '<b><font><%: Tip: 不会编写配置文件？试试在【服务器&策略组】页面一键创建 %></font></b>';
+             startlog.innerHTML = '<b><font><%: Tip: 不会编写配置文件？试试在【服务器与策略组管理】页面一键创建 %></font></b>';
           }
           if(rdmdl==4)
           {
