--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/update.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/update.htm
@@ -4,17 +4,44 @@
 	<table>
 	  <tr><td width="100%" colspan="4">
 	    <p align="center" id="update_tip">
-	  		<b> 注意：如更新失败可手动下载并上传，内核路径为：/etc/openclash </b>
+	  		<b> 注意：如更新失败可手动下载并上传 </b>
 	  	</p>
 	  </td></tr>
 	  <tr><td width="25%"> 已选择编译版本 </td><td width="25%" align="left" id="CORE_VERSION"><%:Collecting data...%></td><td width="25%"> 上次检查更新时间 </td><td width="25%" align="left" id="CHECKTIME"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> 处理器架构（PROC） </td><td width="25%" align="left" id="CPU_MODEL"><%:Collecting data...%></td><td width="25%"> 处理器架构（OPKG） </td><td width="25%" align="left" id="CPU_MODEL2"><%:Collecting data...%></td></tr>
-		<tr><td width="25%"> 当前内核版本 </td><td width="25%" align="left" id="CORE_CV"><%:Collecting data...%></td><td width="25%"> 当前客户端版本 </td><td width="25%" align="left" id="OP_CV"><%:Collecting data...%></td></tr>
-		<tr><td width="25%"> 最新内核版本 </td><td width="25%" align="left" id="CORE_LV"><%:Collecting data...%></td><td width="25%"> 最新客户端版本 </td><td width="25%" align="left" id="OP_LV"><%:Collecting data...%></td></tr>
-	  <tr><td width="25%"> 更新内核</td><td width="25%" align="left" id="core_up"><%:Collecting data...%></td><td width="25%"> 更新客户端 </td><td width="25%" align="left" id="op_up"><%:Collecting data...%></td></tr>
-	  <tr><td width="25%"> 下载最新版本内核</td><td width="25%" align="left" id="ma_core_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本客户端 </td><td width="25%" align="left" id="ma_op_up"><%:Collecting data...%></td></tr>
+	  <tr><td width="100%" colspan="4">
+	    <p align="center">
+	  		<b> 内核路径：/etc/openclash/core/clash </b>
+	  	</p>
+	  </td></tr>
+		<tr><td width="25%"> 当前【Dev分支】内核版本 </td><td width="25%" align="left" id="CORE_CV"><%:Collecting data...%></td><td width="25%"> 最新【Dev分支】内核版本 </td><td width="25%" align="left" id="CORE_LV"><%:Collecting data...%></td></tr>
+		<tr><td width="25%"> 更新内核</td><td width="25%" align="left" id="core_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本内核</td><td width="25%" align="left" id="ma_core_up"><%:Collecting data...%></td></tr>
+		<tr><td width="100%" colspan="4">
+	    <p align="center">
+	  		<b> 内核路径：/etc/openclash/core/clash_tun </b>
+	  	</p>
+	  </td></tr>
+		<tr><td width="25%"> 当前【TUN模式】内核版本 </td><td width="25%" align="left" id="CORE_TUN_CV"><%:Collecting data...%></td><td width="25%"> 最新【TUN模式】内核版本 </td><td width="25%" align="left" id="CORE_TUN_LV"><%:Collecting data...%></td></tr>
+		<tr><td width="25%"> 更新内核</td><td width="25%" align="left" id="core_tun_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本内核</td><td width="25%" align="left" id="ma_core_tun_up"><%:Collecting data...%></td></tr>
+		<tr><td width="100%" colspan="4">
+	    <p align="center">
+	  		<b> 内核路径：/etc/openclash/core/clash_game </b>
+	  	</p>
+	  </td></tr>
+		<tr><td width="25%"> 当前【游戏模式】内核版本 </td><td width="25%" align="left" id="CORE_GAME_CV"><%:Collecting data...%></td><td width="25%"> 最新【游戏模式】内核版本 </td><td width="25%" align="left" id="CORE_GAME_LV"><%:Collecting data...%></td></tr>
+		<tr><td width="25%"> 更新内核</td><td width="25%" align="left" id="core_game_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本内核</td><td width="25%" align="left" id="ma_core_game_up"><%:Collecting data...%></td></tr>
 	</table>
-
+</fieldset>
+<fieldset class="cbi-section">
+	<table>
+		<tr><td width="100%" colspan="4">
+	    <p align="center">
+	  		<b> 客户端版本更新 </b>
+	  	</p>
+	  </td></tr>
+		<tr><td width="25%"> 当前客户端版本 </td><td width="25%" align="left" id="OP_CV"><%:Collecting data...%></td><td width="25%"> 最新客户端版本 </td><td width="25%" align="left" id="OP_LV"><%:Collecting data...%></td></tr>
+	  <tr><td width="25%"> 更新客户端 </td><td width="25%" align="left" id="op_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本客户端 </td><td width="25%" align="left" id="ma_op_up"><%:Collecting data...%></td></tr>
+	</table>
 </fieldset>
 
 <script type="text/javascript">//<![CDATA[
@@ -24,12 +51,20 @@
 	var cpu_model2 = document.getElementById('CPU_MODEL2');
 	var core_cv = document.getElementById('CORE_CV');
 	var core_lv = document.getElementById('CORE_LV');
+	var core_tun_cv = document.getElementById('CORE_TUN_CV');
+	var core_tun_lv = document.getElementById('CORE_TUN_LV');
+	var core_game_cv = document.getElementById('CORE_GAME_CV');
+	var core_game_lv = document.getElementById('CORE_GAME_LV');
 	var op_cv = document.getElementById('OP_CV');
 	var op_lv = document.getElementById('OP_LV');
 	var core_up = document.getElementById('core_up');
+	var core_tun_up = document.getElementById('core_tun_up');
+	var core_game_up = document.getElementById('core_game_up');
 	var op_up = document.getElementById('op_up');
 	var update_tip = document.getElementById('update_tip');
 	var ma_core_up  = document.getElementById('ma_core_up');
+	var ma_core_tun_up  = document.getElementById('ma_core_tun_up');
+	var ma_core_game_up  = document.getElementById('ma_core_game_up');
 	var ma_op_up  = document.getElementById('ma_op_up');
 	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
@@ -60,11 +95,31 @@
       else {
          core_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
       }
+      if ( status.coretuncv == "0" ) {
+         core_tun_cv.innerHTML = "<b><font color=red><%:File Not Exist%></font></b>";
+      }
+      else if (status.coretuncv != "") {
+         core_tun_cv.innerHTML = "<b><font color=green>"+status.coretuncv+"</font></b>";
+      }
+      else {
+         core_tun_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+      }
+      if ( status.coregamecv == "0" ) {
+         core_game_cv.innerHTML = "<b><font color=red><%:File Not Exist%></font></b>";
+      }
+      else if (status.coregamecv != "") {
+         core_game_cv.innerHTML = "<b><font color=green>"+status.coregamecv+"</font></b>";
+      }
+      else {
+         core_game_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+      }
       var corelv = status.corelv;
       var arr_core = corelv.split(",");
       var corelvis = arr_core[0];
-      var new_ch = arr_core[1];
-			if ( new_ch == "2" ) {
+      var coretunlvis = arr_core[1];
+      var coregamelvis = arr_core[2];
+      var new_ch = arr_core[3];
+			if ( new_ch == "2" || new_ch == "3" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+corelvis+"<%:<New>%></font></b>";
 			}
 			else if (corelvis != "" && corelvis != "\n" ) {
@@ -72,6 +127,21 @@
 			}
 			else {
 			   core_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+			}
+			if ( new_ch == "3" ) {
+			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"<%:<New>%></font></b>";
+			}
+			else if (coretunlvis != "" && coretunlvis != "\n" ) {
+			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"</font></b>";
+			}
+			else {
+			   core_tun_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+			}
+			if (coregamelvis != "" && coregamelvis != "\n" ) {
+			   core_game_lv.innerHTML = "<b><font color=green>"+coregamelvis+"</font></b>";
+			}
+			else {
+			   core_game_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 			var oplv = status.oplv;
       var arr_op = oplv.split(",");
@@ -119,11 +189,31 @@
       else {
          core_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
       }
+      if ( status.coretuncv == "0" ) {
+         core_tun_cv.innerHTML = "<b><font color=red><%:File Not Exist%></font></b>";
+      }
+      else if (status.coretuncv != "") {
+         core_tun_cv.innerHTML = "<b><font color=green>"+status.coretuncv+"</font></b>";
+      }
+      else {
+         core_tun_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+      }
+      if ( status.coregamecv == "0" ) {
+         core_game_cv.innerHTML = "<b><font color=red><%:File Not Exist%></font></b>";
+      }
+      else if (status.coregamecv != "") {
+         core_game_cv.innerHTML = "<b><font color=green>"+status.coregamecv+"</font></b>";
+      }
+      else {
+         core_game_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+      }
       var corelv = status.corelv;
       var arr_core = corelv.split(",");
       var corelvis = arr_core[0];
-      var new_ch = arr_core[1];
-			if ( new_ch == "2" ) {
+      var coretunlvis = arr_core[1];
+      var coregamelvis = arr_core[2];
+      var new_ch = arr_core[3];
+			if ( new_ch == "2" || new_ch == "3" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+corelvis+"<%:<New>%></font></b>";
 			}
 			else if (corelvis != "" && corelvis != "\n" ) {
@@ -131,6 +221,21 @@
 			}
 			else {
 			   core_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+			}
+			if ( new_ch == "3" ) {
+			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"<%:<New>%></font></b>";
+			}
+			else if (coretunlvis != "" && coretunlvis != "\n" ) {
+			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"</font></b>";
+			}
+			else {
+			   core_tun_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
+			}
+			if (coregamelvis != "" && coregamelvis != "\n" ) {
+			   core_game_lv.innerHTML = "<b><font color=green>"+coregamelvis+"</font></b>";
+			}
+			else {
+			   core_game_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 			var oplv = status.oplv;
       var arr_op = oplv.split(",");
@@ -150,14 +255,40 @@
 	});
 	
 	core_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return core_update(this)"/>';
+	core_tun_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return core_tun_update(this)"/>';
+	core_game_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return core_game_update(this)"/>';
 	op_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return op_update(this)"/>';
 	ma_core_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_core_update(this)"/>';
+	ma_core_tun_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_core_tun_update(this)"/>';
+	ma_core_game_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_core_game_update(this)"/>';
 	ma_op_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_op_update(this)"/>';
 	
 	function core_update(btn)
     {
     
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coreupdate")%>', null, function(x, status) {
+        btn.value    = '<%:检查并更新%>';
+        btn.disabled = false;
+        return false; 
+        });
+
+    }
+    
+	function core_tun_update(btn)
+    {
+    
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coretunupdate")%>', null, function(x, status) {
+        btn.value    = '<%:检查并更新%>';
+        btn.disabled = false;
+        return false; 
+        });
+
+    }
+    
+	function core_game_update(btn)
+    {
+    
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coregameupdate")%>', null, function(x, status) {
         btn.value    = '<%:检查并更新%>';
         btn.disabled = false;
         return false; 
@@ -193,6 +324,48 @@
         return false; 
     }
     
+    function ma_core_tun_update(btn)
+    {
+        btn.value    = '<%:下载到本地%>';
+        btn.disabled = false;
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', null, function(x, status) {
+        if ( x && x.status == 200 ) {
+        	 var corelv = status.corelv;
+           var arr_core = corelv.split(",");
+           var coretunlvis = arr_core[1];
+           if ( status.corever != "0\n" && coretunlvis != "\n" && coretunlvis != "" ) {
+              url3='https://github.com/Dreamacro/clash/releases/download/TUN/clash-'+status.corever+'-'+coretunlvis+'.gz';
+              window.open(url3);
+           }
+           else if ( status.corever == "0\n" ) {
+              alert('未选择编译版本，请到常规设置标签中配置！')
+           }
+           else if ( coretunlvis == "\n" || coretunlvis == "" ) {
+              alert('最新版本获取失败，请稍后再试！')
+           }
+        }
+        });
+        return false; 
+    }
+    
+    function ma_core_game_update(btn)
+    {
+        btn.value    = '<%:下载到本地%>';
+        btn.disabled = false;
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', status.corever, function(x, status) {
+        if ( x && x.status == 200 ) {
+           if ( status.corever != "0\n" ) {
+              url4='https://github.com/vernesong/OpenClash/releases/download/TUN/clash-'+status.corever+'.tar.gz';
+              window.open(url4);
+           }
+           else {
+              alert('未选择编译版本，请到常规设置标签中配置！')
+           }
+        }
+        });
+        return false; 
+    }
+    
     function ma_op_update(btn)
     {
         btn.value    = '<%:下载到本地%>';
@@ -219,7 +392,7 @@
 		      var rdmdl=Math.floor(Math.random()*2)+1;
 		      if(rdmdl==1)
           {
-             update_tip.innerHTML = '<b><font><%: 注意：如更新失败可手动下载并上传，内核路径为：/etc/openclash %></font></b>';
+             update_tip.innerHTML = '<b><font><%: 注意：如更新失败可手动下载并上传 %></font></b>';
           }
           if(rdmdl==2)
           {
