--- a/luci-app-openclash/luasrc/view/openclash/status.htm
+++ b/luci-app-openclash/luasrc/view/openclash/status.htm
@@ -179,7 +179,7 @@
 			}
 			else
 			{
-			   clash.innerHTML = status.clash ? '<b><font color=green><%:RUNNING%><%: <受限模式> %></font></b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			   clash.innerHTML = status.clash ? '<b><font color=green><%:RUNNING%><%: <功能受限状态> %></font></b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
 			}
 			if ( status.mode == "fake-ip\n" )
 			{
