--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -98,7 +98,7 @@
       var cpu_model22 = arr_model[1];
 		  cpu_model.innerHTML = cpu_model1 ? "<b><font color=green>"+cpu_model1+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       cpu_model2.innerHTML = cpu_model22 ? "<b><font color=green>"+cpu_model22+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
-		  if ( status.corever != "0\n" && status.corever != "" ) {
+		  if ( status.corever != "0" && status.corever != "" ) {
 		     core_version.innerHTML = "<b><font color=green>"+status.corever+"</font></b>";
 		  }
 		  else {
@@ -142,28 +142,28 @@
       var corelvis = arr_core[0];
       var coretunlvis = arr_core[1];
       var coregamelvis = arr_core[2];
-			if (corelvis != status.corecv && corelvis != "" && corelvis != "\n") {
+			if (corelvis != status.corecv && corelvis != "") {
 			   core_lv.innerHTML = "<b><font color=green>"+corelvis+"<%:<New>%></font></b>";
 			}
-			else if (corelvis != "" && corelvis != "\n" && corelvis == status.corecv) {
+			else if (corelvis != "" && corelvis == status.corecv) {
 			   core_lv.innerHTML = "<b><font color=green>"+corelvis+"</font></b>";
 			}
 			else {
 			   core_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
-			if (coretunlvis != status.coretuncv && coretunlvis != "" && coretunlvis != "\n") {
+			if (coretunlvis != status.coretuncv && coretunlvis != "") {
 			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"<%:<New>%></font></b>";
 			}
-			else if (coretunlvis != "" && coretunlvis != "\n" && coretunlvis == status.coretuncv) {
+			else if (coretunlvis != "" && coretunlvis == status.coretuncv) {
 			   core_tun_lv.innerHTML = "<b><font color=green>"+coretunlvis+"</font></b>";
 			}
 			else {
 			   core_tun_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
-			if (coregamelvis != status.coregamecv && coregamelvis != "" && coregamelvis != "\n") {
+			if (coregamelvis != status.coregamecv && coregamelvis != "") {
 			   core_game_lv.innerHTML = "<b><font color=green>"+coregamelvis+"<%:<New>%></font></b>";
 			}
-			else if (coregamelvis != "" && coregamelvis != "\n" && coregamelvis == status.coregamecv) {
+			else if (coregamelvis != "" && coregamelvis == status.coregamecv) {
 			   core_game_lv.innerHTML = "<b><font color=green>"+coregamelvis+"</font></b>";
 			}
 			else {
@@ -177,7 +177,7 @@
 			if ( new_op == "2" ) {
 			   op_lv.innerHTML = "<b><font color=green>"+oplvis+"<%:<New>%></font></b>";
 			}
-			else if (oplvis != "" && oplvis != "\n") {
+			else if (oplvis != "") {
 			   op_lv.innerHTML = "<b><font color=green>"+oplvis+"</font></b>";
 			}
 			else {
@@ -249,7 +249,7 @@
         btn.disabled = false;
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', status.corever, function(x, status) {
         if ( x && x.status == 200 ) {
-           if ( status.corever != "0\n" ) {
+           if ( status.corever != "0" ) {
               url1='https://github.com/vernesong/OpenClash/releases/download/Clash/clash-'+status.corever+'.tar.gz';
               winOpen(url1);
            }
@@ -270,14 +270,14 @@
         	 var corelv = status.corelv;
            var arr_core = corelv.split(",");
            var coretunlvis = arr_core[1];
-           if ( status.corever != "0\n" && coretunlvis != "\n" && coretunlvis != "" ) {
+           if ( status.corever != "0" && coretunlvis != "" ) {
               url3='https://github.com/vernesong/OpenClash/releases/download/TUN-Premium/clash-'+status.corever+'-'+coretunlvis+'.gz';
               winOpen(url3);
            }
-           else if ( status.corever == "0\n" ) {
+           else if ( status.corever == "0" ) {
               alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
            }
-           else if ( coretunlvis == "\n" || coretunlvis == "" ) {
+           else if ( coretunlvis == "" ) {
               alert('<%:Failed to get the latest version. Please try again later!%>')
            }
         }
@@ -291,7 +291,7 @@
         btn.disabled = false;
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', status.corever, function(x, status) {
         if ( x && x.status == 200 ) {
-           if ( status.corever != "0\n" ) {
+           if ( status.corever != "0" ) {
               url4='https://github.com/vernesong/OpenClash/releases/download/TUN/clash-'+status.corever+'.tar.gz';
               winOpen(url4);
            }
@@ -311,7 +311,7 @@
         if ( x && x.status == 200 ) {
            var oplv = status.oplv;
            var oplvis = oplv.substring(oplv.indexOf("v") + 1,oplv.indexOf(","));
-           if ( oplvis != "" && oplvis != "\n" ) {
+           if ( oplvis != "" ) {
               url2='https://github.com/vernesong/OpenClash/releases/download/v'+oplvis+'/luci-app-openclash_'+oplvis+'_all.ipk';
               winOpen(url2);
            }
@@ -373,7 +373,7 @@
         if (r == true) {
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update_check")%>', null, function(x, status) {
         	if ( x && x.status == 200 ) {
-        		if ( status.corever != "0\n" ) {
+        		if ( status.corever != "0" ) {
         			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update")%>', null, function(x, status) {
               	if ( x && x.status != 200 ) {
             			alert('<%:Check failed, Please try again later!%>')
