--- a/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
+++ b/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
@@ -260,7 +260,7 @@
 	var dler_checkin = document.getElementById('dler-checkin');
 
 	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "dler_info")%>', null, function(x, status) {
-		if ( x && x.status == 200 && status.dler_info != "error") {
+		if ( x && x.status == 200 && status.dler_info != "error" ) {
 			dler_plan.innerHTML = status.dler_info.plan;
 			dler_plantime.innerHTML = status.dler_info.plan_time;
 			dler_money.innerHTML = status.dler_info.money;
@@ -310,7 +310,7 @@ function dler_checkin_btn(btn)
 				status.dler_checkin.data.checkin);
 			}
 			else if (status.dler_checkin.msg) {
-				alert("<%:Dler Cloud Account Checkin Failed, Result:%>\n\n"+
+				alert("<%:Dler Cloud Checkin Failed, Result:%>\n\n"+
 				status.dler_checkin.msg);
 			}
 			else {
