--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -6,7 +6,23 @@
 	  		<b><%:Note: if the update fails, you can manually download and upload%></b>
 	  	</p>
 	  </td></tr>
-	  <tr><td width="25%"><%:Compiled Version Selected%></td><td width="25%" align="left" id="CORE_VERSION"><%:Collecting data...%></td><td width="25%"><%:Last Check Update%></td><td width="25%" align="left" id="CHECKTIME"><%:Collecting data...%></td></tr>
+	  <tr><td width="25%"><%:Compiled Version Selected%></td>
+	  	<td width="25%" align="left"><select id="CORE_VERSION">
+	  		<option value="linux-386"><%:linux-386%></option>
+				<option value="linux-amd64"><%:linux-amd64(x86-64)%></option>
+				<option value="linux-armv5"><%:linux-armv5%></option>
+				<option value="linux-armv6"><%:linux-armv6%></option>
+				<option value="linux-armv7"><%:linux-armv7%></option>
+				<option value="linux-armv8"><%:linux-armv8%></option>
+				<option value="linux-mips-hardfloat"><%:linux-mips-hardfloat%></option>
+				<option value="linux-mips-softfloat"><%:linux-mips-softfloat%></option>
+				<option value="linux-mips64"><%:linux-mips64%></option>
+				<option value="linux-mips64le"><%:linux-mips64le%></option>
+				<option value="linux-mipsle-softfloat"><%:linux-mipsle-softfloat%></option>
+				<option value="linux-mipsle-hardfloat"><%:linux-mipsle-hardfloat%></option>
+				<option value="0"><%:Not Set%></option>
+	  	</select></td>
+	  	<td width="25%"><%:Last Check Update%></td><td width="25%" align="left" id="CHECKTIME"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"><%:CPU Architecture (OS)%></td><td width="25%" align="left" id="CPU_MODEL"><%:Collecting data...%></td><td width="25%"><%:CPU Architecture (OPKG)%></td><td width="25%" align="left" id="CPU_MODEL2"><%:Collecting data...%></td></tr>
 	  <tr><td width="100%" colspan="4">
 	    <p align="center">
@@ -99,10 +115,10 @@
 		  cpu_model.innerHTML = cpu_model1 ? "<b><font color=green>"+cpu_model1+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       cpu_model2.innerHTML = cpu_model22 ? "<b><font color=green>"+cpu_model22+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
 		  if ( status.corever != "0" && status.corever != "" ) {
-		     core_version.innerHTML = "<b><font color=green>"+status.corever+"</font></b>";
+		     core_version.value = status.corever;
 		  }
 		  else {
-		     core_version.innerHTML = "<b><font color=red><%:No compiled version is selected. Please configure it in the General Settings tab!%></font></b>";
+		     core_version.innerHTML = "0";
 		  }
 		  if ( status.upchecktime != "1" ) {
 		     checktime.innerHTML = "<b><font color=green>"+status.upchecktime+"</font></b>";
@@ -186,13 +202,13 @@
 		}
 	});
 	
-	core_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_update(this)"/>';
-	core_tun_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_tun_update(this)"/>';
-	core_game_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_game_update(this)"/>';
+	core_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_update(this,\'Dev\')"/>';
+	core_tun_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_update(this,\'TUN\')"/>';
+	core_game_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return core_update(this,\'Game\')"/>';
 	op_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Check And Update%>" onclick="return op_update(this)"/>';
-	ma_core_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_update(this)"/>';
-	ma_core_tun_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_tun_update(this)"/>';
-	ma_core_game_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_game_update(this)"/>';
+	ma_core_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_update(this,\'Dev\')"/>';
+	ma_core_tun_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_update(this,\'TUN\')"/>';
+	ma_core_game_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_core_update(this,\'Game\')"/>';
 	ma_op_up.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Download%>" onclick="return ma_op_update(this)"/>';
 	restore.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reset" value="<%:Restore Default Config%>" onclick="return restore_config(this)"/>';
 	one_key_update.innerHTML = '<input type="button" class="btn cbi-button cbi-button-reset" value="<%:One Click Check Update%>" onclick="return all_one_key_update(this)"/>';
@@ -206,36 +222,22 @@
       }
 	  }
 	  
-	function core_update(btn)
+	function core_update(btn,type)
     {
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coreupdate")%>', null, function(x, status) {
-        btn.value    = '<%:Check And Update%>';
-        btn.disabled = false;
-        return false;
-        });
+    	var v = document.getElementById('CORE_VERSION').value;
+			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "save_corever")%>', {core_ver: v}, function(x, status) {
+				if (x && x.status == 200) {
+					XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coreupdate")%>', {core_type: type}, function(x, status) {
+        	btn.value    = '<%:Check And Update%>';
+        	btn.disabled = false;
+        	return false;
+        	});
+				}
+		});
     }
-    
-	function core_tun_update(btn)
-    {
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coretunupdate")%>', null, function(x, status) {
-        btn.value    = '<%:Check And Update%>';
-        btn.disabled = false;
-        return false;
-        });
-    }
-    
-	function core_game_update(btn)
-    {
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coregameupdate")%>', null, function(x, status) {
-        btn.value    = '<%:Check And Update%>';
-        btn.disabled = false;
-        return false;
-        });
-    }
-	
+
 	function op_update(btn)
     {
-
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "opupdate")%>', null, function(x, status) {
         btn.value    = '<%:Check And Update%>';
         btn.disabled = false;
@@ -243,64 +245,45 @@
         });
     }
     
-    function ma_core_update(btn)
+    function ma_core_update(btn,type)
     {
+    	var v = document.getElementById('CORE_VERSION').value;
+			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "save_corever")%>', {core_ver: v}, function(x, status) {
+			if (x && x.status == 200) {
         btn.value    = '<%:Download%>';
         btn.disabled = false;
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', status.corever, function(x, status) {
         if ( x && x.status == 200 ) {
-           if ( status.corever != "0" ) {
-              url1='https://github.com/vernesong/OpenClash/releases/download/Clash/clash-'+status.corever+'.tar.gz';
-              winOpen(url1);
-           }
-           else {
-              alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
-           }
-        }
-        });
-        return false; 
-    }
-    
-    function ma_core_tun_update(btn)
-    {
-        btn.value    = '<%:Download%>';
-        btn.disabled = false;
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', null, function(x, status) {
-        if ( x && x.status == 200 ) {
-        	 var corelv = status.corelv;
-           var arr_core = corelv.split(",");
-           var coretunlvis = arr_core[1];
-           if ( status.corever != "0" && coretunlvis != "" ) {
-              url3='https://github.com/vernesong/OpenClash/releases/download/TUN-Premium/clash-'+status.corever+'-'+coretunlvis+'.gz';
-              winOpen(url3);
-           }
-           else if ( status.corever == "0" ) {
-              alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
-           }
-           else if ( coretunlvis == "" ) {
-              alert('<%:Failed to get the latest version. Please try again later!%>')
-           }
-        }
-        });
-        return false; 
-    }
-    
-    function ma_core_game_update(btn)
-    {
-        btn.value    = '<%:Download%>';
-        btn.disabled = false;
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_ma")%>', status.corever, function(x, status) {
-        if ( x && x.status == 200 ) {
-           if ( status.corever != "0" ) {
-              url4='https://github.com/vernesong/OpenClash/releases/download/TUN/clash-'+status.corever+'.tar.gz';
+        	if ( status.corever != "0" ) {
+        		if (type == "Dev") {
+        			url1='https://github.com/vernesong/OpenClash/releases/download/Clash/clash-'+status.corever+'.tar.gz';
+        			winOpen(url1);
+        		}
+        		if (type == "TUN") {
+        			var corelv = status.corelv;
+          		var arr_core = corelv.split(",");
+          		var coretunlvis = arr_core[1];
+          		if ( coretunlvis != "" ) {
+              	url3='https://github.com/vernesong/OpenClash/releases/download/TUN-Premium/clash-'+status.corever+'-'+coretunlvis+'.gz';
+              	winOpen(url3);
+          		}
+          		else {
+              	alert('<%:Failed to get the latest version. Please try again later!%>')
+          		}
+        		}
+        		if (type == "Game") {
+        			url4='https://github.com/vernesong/OpenClash/releases/download/TUN/clash-'+status.corever+'.tar.gz';
               winOpen(url4);
-           }
-           else {
-              alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
-           }
+        		}
+        	}
+        	else {
+        		alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
+        	}
         }
         });
-        return false; 
+        return false;
+    	}
+      });
     }
     
     function ma_op_update(btn)
@@ -332,6 +315,7 @@
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "remove_all_core")%>', null, function(x, status) {
         	if ( x && x.status == 200 ) {
         		alert('<%:Remove succeeded!%>')
+        		window.location.href='<%="settings?tab.openclash.config=version_update"%>';
         	}
           else {
             alert('<%:Remove failed!%>')
@@ -359,40 +343,42 @@
             window.location.href='<%="settings"%>';
            }
         });
-        } else {
         }
         btn.disabled = false;
         return false; 
     }
-    
+
     function all_one_key_update(btn)
     {
-        btn.value    = '<%:One Click Check Update%>';
-        btn.disabled = true;
-        var r = confirm("<%:Check and update all Cores and plug-ins?%>")
-        if (r == true) {
-        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update_check")%>', null, function(x, status) {
-        	if ( x && x.status == 200 ) {
-        		if ( status.corever != "0" ) {
-        			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update")%>', null, function(x, status) {
-              	if ( x && x.status != 200 ) {
-            			alert('<%:Check failed, Please try again later!%>')
-           			}
-              });
-						}
-						else {
-							alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
-           	}
-        	}
-          else {
-            alert('<%:Check failed, Please try again later!%>')
-          }
-        });
+    	var v = document.getElementById('CORE_VERSION').value;
+			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "save_corever")%>', {core_ver: v}, function(x, status) {
+				if (x && x.status == 200) {
+					btn.value    = '<%:One Click Check Update%>';
+        	btn.disabled = true;
+        	var r = confirm("<%:Check and update all Cores and plug-ins?%>")
+        	if (r == true) {
+        	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update_check")%>', null, function(x, status) {
+        		if ( x && x.status == 200 ) {
+        			if ( status.corever != "0" ) {
+        				XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "one_key_update")%>', null, function(x, status) {
+              		if ( x && x.status != 200 ) {
+            				alert('<%:Check failed, Please try again later!%>')
+           				}
+              	});
+							}
+							else {
+								alert('<%:No compiled version is selected. Please configure it in the General Settings tab!%>')
+           		}
+        		}
+          	else {
+           	 alert('<%:Check failed, Please try again later!%>')
+          	}
+        	});
 				}
-				else {
-        }
         btn.disabled = false;
-        return false; 
+        return false;
+				}
+			});
     }
     
     XHR.poll(7, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "startlog")%>', status.startlog, function(x, status) {
@@ -420,4 +406,3 @@
 	});
 
 //]]></script>
-      
