--- a/luci-app-openclash/luasrc/view/openclash/dler_login.htm
+++ b/luci-app-openclash/luasrc/view/openclash/dler_login.htm
@@ -7,9 +7,17 @@
 			var s = document.getElementById(option+'-status');
 			var e = document.getElementById('cbid.openclash.config.dler_email').value;
 			var p = document.getElementById('cbid.openclash.config.dler_passwd').value;
-			var c = document.getElementById('cbid.openclash.config.dler_checkin').value;
-			var i = document.getElementById('cbid.openclash.config.dler_checkin_interval').value;
-			var m = document.getElementById('cbid.openclash.config.dler_checkin_multiple').value;
+			var c = document.getElementById('cbid.openclash.config.dler_checkin')
+			if (c && c.checked) {
+				c = "1"
+				var i = document.getElementById('cbid.openclash.config.dler_checkin_interval').value
+				var m = document.getElementById('cbid.openclash.config.dler_checkin_multiple').value
+			}
+			else {
+				c = "0"
+				var i = "1"
+				var m = "1"
+			}
 			btn.value = '<%:Login...%>';
 			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "dler_login_info_save")%>', {email: e, passwd : p, checkin: c, interval: i, multiple: m}, function(x, status) {
 				if (x && x.status == 200) {
