--- a/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
+++ b/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
@@ -135,7 +135,7 @@
 .card .general .dler-result {
   color: #444;
   font-size:16px;
-  transform: translateX(20%);
+  transform: translateX(35%);
   white-space: nowrap;
   display: inline-block;
   width: 40%;
@@ -150,7 +150,7 @@
 .card .general .dler-result2 {
   color: #444;
   font-size:16px;
-  transform: translateX(20%);
+  transform: translateX(10%);
   white-space: nowrap;
   display: inline-block;
   width: 50%;
@@ -174,9 +174,7 @@
   font-weight: bold;
   display: inline-block;
   overflow: hidden;
-  position: relative;
-  right: 5%;
-  margin-top: 10%;
+  margin-top: 20px;
   -webkit-appearance:button;
 }
 
@@ -241,7 +239,7 @@
                 <span class="dler-title"><%:Plan Traffic%>:</span><span class="dler-result2" id="dler-traffic"><%:Collecting data...%></span>
             </p>
         	</div>
-        	<div style="width: 20%; text-align:center">
+        	<div style="width: 30%; text-align:center">
         		<p>
         			<input type="button" class="btn" value="<%:Checkin%>" onclick="return dler_checkin_btn(this)"
         		</p>
